--- a/index.html
+++ b/index.html
@@ -2,10 +2,63 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
+  <main>
+  <div>
+    <img src="./assets/pictures/woman-gccf65e68c_640.jpg" alt="foto">
+  </div>
+  <header>
+    <h1>Maria Baibak</h1>
+    <nav>
+      <ul>
+        <li><a href="mailto:Maria@gmail.com">mailto:Maria@gmail.com</a></li>
+        <li><a href="09998887766">09998887766</a></li>
+        <li><a href="Country, City, Street,18/7">Country, City, Street,18/7</a></li>
+        <article>
+          <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, natus.</h2>
+          <section><p> <strong>Lorem ipsum dolor</strong> sit amet consectetur adipisicing elit. Quo fuga expedita nemo consequatur voluptate sequi nihil dolore accusantium accusamus iure, enim quaerat veniam saepe voluptatem.</p></section>
+        </article>
+        <article>
+          <h2>Skills</h2>
+          <section>
+            <h3>Tech Stack</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </section>
+          <section>
+            <h3>Databases</h3>
+              <ul>
+                <li><p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p></li>
+                <li><p>Lorem ipsum dolor sit amet.</p></li>
+              </ul>
+          </section>
+          <section>
+            <h3>Environment &Tools</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In placeat possimus similique.</p>
+          </section>
+        </article>
+        <article>
+          <h2>Experience</h2>
+          <section>
+            <h2>Scalified LLC</h2>
+            <h3>Lead Backend Engineer</h3>
+            <ul>
+              <li><p><strong>Sep.2016 - Present</strong></p></li>
+              <li><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus quidem dolore sapiente? Amet, blanditiis unde!</p></li>
+              <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis reprehenderit beatae enim.</p></li>
+              <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In est officia natus cupiditate molestiae necessitatibus odit. Animi, ratione.</p></li>
+              <li><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque dolor officiis ad voluptatibus, animi cumque?</p></li>
+            </ul>
+          </section>
+          <section></section>
+          <section></section>
+        </article>
+      </ul>
+    </nav>
+  </header>
+</main>
   
 </body>
 </html>
