--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
   <main>
@@ -13,37 +14,38 @@
   <header>
     <h1>Maria Baibak</h1>
     <nav>
-      <ul>
-        <li><a href="mailto:Maria@gmail.com">mailto:Maria@gmail.com</a></li>
-        <li><a href="09998887766">09998887766</a></li>
-        <li><a href="Country, City, Street,18/7">Country, City, Street,18/7</a></li>
+      <em><a href="mailto:Maria@gmail.com">Maria@gmail.com </a><a class="phone" href="09998887766">  tel: 09998887766 </a><a href="Country, City, Street,18/7"> Country, City, Street,18/7</a></em>
+    </nav>
+        <!-- <a href="mailto:Maria@gmail.com"><em>Maria@gmail.com</em>
+        <a href="09998887766"><em>09998887766</em></a>
+        <a href="Country, City, Street,18/7"><em>Country, City, Street,18/7</em></a> -->
         <article>
-          <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, natus.</h2>
-          <section><p> <strong>Lorem ipsum dolor</strong> sit amet consectetur adipisicing elit. Quo fuga expedita nemo consequatur voluptate sequi nihil dolore accusantium accusamus iure, enim quaerat veniam saepe voluptatem.</p></section>
+          <h2>Lead Backend Engineer with 8+ years of Experience</h2>
+          <section><p> <strong>Skilled Java Developer</strong>orem ipsum dolor sit amet consectetur adipisicing elit. Error dolorem adipisci quam eius porro nisi tempore, ad similique nihil rerum! Dolorum deserunt exercitationem itaque eos, quisquam debitis laborum nam natus nesciunt in ratione veniam nemo.</p></section>
         </article>
         <article>
-          <h2>Skills</h2>
+          <h3>Skills</h3>
           <section>
-            <h3>Tech Stack</h3>
+            <h4>Tech Stack</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
           </section>
           <section>
-            <h3>Databases</h3>
+            <h4>Databases</h4>
               <ul>
-                <li><p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p></li>
-                <li><p>Lorem ipsum dolor sit amet.</p></li>
+                <li><p><strong>SQL</strong> ipsum dolor sit amet consectetur adipisicing.</p></li>
+                <li><p><strong>NoSQL</strong> ipsum dolor.</p></li>
               </ul>
           </section>
           <section>
-            <h3>Environment &Tools</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In placeat possimus similique.</p>
+            <h4>Environment &Tools</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In placeat.</p>
           </section>
         </article>
         <article>
-          <h2>Experience</h2>
+          <h3>Experience</h3>
           <section>
-            <h2>Scalified LLC</h2>
-            <h3>Lead Backend Engineer</h3>
+            <h4 class="company">New_Age LLC</h4>
+            <h4>Lead Backend Engineer</h4>
             <ul>
               <li><p><strong>Sep.2016 - Present</strong></p></li>
               <li><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus quidem dolore sapiente? Amet, blanditiis unde!</p></li>
@@ -56,7 +58,7 @@
           <section></section>
         </article>
       </ul>
-    </nav>
+    
   </header>
 </main>
   
