--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
   <header>
     <h1>Maria Baibak</h1>
     <nav>
-      <em><a href="mailto:Maria@gmail.com">Maria@gmail.com </a><a class="phone" href="09998887766">  tel: 09998887766 </a><a href="Country, City, Street,18/7"> Country, City, Street,18/7</a></em>
+      <em><a href="">Maria@gmail.com </a><a class="phone" href="">  tel: 09998887766 </a><a href=""> Country, City, Street,18/7</a></em>
     </nav>
-        <!-- <a href="mailto:Maria@gmail.com"><em>Maria@gmail.com</em>
-        <a href="09998887766"><em>09998887766</em></a>
-        <a href="Country, City, Street,18/7"><em>Country, City, Street,18/7</em></a> -->
         <article>
           <h2>Lead Backend Engineer with 8+ years of Experience</h2>
-          <section><p> <strong>Skilled Java Developer</strong>orem ipsum dolor sit amet consectetur adipisicing elit. Error dolorem adipisci quam eius porro nisi tempore, ad similique nihil rerum! Dolorum deserunt exercitationem itaque eos, quisquam debitis laborum nam natus nesciunt in ratione veniam nemo.</p></section>
+          <section>
+            <p><strong>Skilled Java Developer</strong> orem ipsum dolor sit amet consectetur adipisicing elit. Error dolorem adipisci quam eius porro nisi tempore, ad similique nihil rerum! Dolorum deserunt exercitationem itaque eos, quisquam debitis laborum nam natus nesciunt in ratione veniam nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, perferendis. Odit ipsam ipsum fugiat voluptatem optio, ex sit repudiandae praesentium.</p>
+          </section>
         </article>
         <article>
           <h3>Skills</h3>
@@ -48,10 +47,10 @@
             <h4>Lead Backend Engineer</h4>
             <ul>
               <li><p><strong>Sep.2016 - Present</strong></p></li>
-              <li><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus quidem dolore sapiente? Amet, blanditiis unde!</p></li>
+              <li><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus quidem dolore sapiente.</p></li>
               <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis reprehenderit beatae enim.</p></li>
               <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In est officia natus cupiditate molestiae necessitatibus odit. Animi, ratione.</p></li>
-              <li><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque dolor officiis ad voluptatibus, animi cumque?</p></li>
+              <li><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque dolor officiis.</p></li>
             </ul>
           </section>
           <section></section>
